free base64 library docs #6 encoding fixes (alpha)